feat: enhance data loading and cleaning processes with robust fallback mechanisms for CoNLL-2003 and Census datasets, improve email and phone detection in synthetic data generation, and update .gitignore for MLflow artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -99,6 +99,18 @@ production-ner-model-final/
 production-ner-deberta-crf/
 model_metadata.json
 
+# MLflow experiment tracking
+mlruns/
+mlartifacts/
+.mlflow/
+
+# Model checkpoints and training artifacts
+checkpoints/
+*.safetensors
+runs/
+logs/
+wandb/
+
 # Other
 *.log
 *.sqlite3
