feat: add analysis scripts for census data quality and detailed BIO tagging issues, implement extraction of clean census data for efficient reuse, and generate high-quality LLM-style NER training corpus

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,9 @@ coverage.xml
 *.npz
 *.npy
 
+# # Generated/extracted data files
+# data/census_clean.json
+
 # Results, metadata, and experiment outputs
 production-ner-model-final/
 production-ner-deberta-crf/
